@@ -2,6 +2,11 @@ hptutil 1.01
 ---------------
 
 ----- cvs ci ------
+Sat Jun  3 15:35:08 NOVST 2000
+max:
+* nopack support - don't purge & pack
+
+----- cvs ci ------
 Fri May 26 18:31:45 MSD 2000
 Fedor:
 * bagfix in packarea.c - free() used two times.
